--- a/SMOArenaOnline/SMOArenaOnline.CSharp.csproj
+++ b/SMOArenaOnline/SMOArenaOnline.CSharp.csproj
@@ -159,6 +159,8 @@
     <Compile Include="Assets\Scripts\Multiplayer\Preloader.cs" />
     <Compile Include="Assets\Scripts\Multiplayer\RoomProperty.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
+    <Compile Include="Assets\Scripts\Player\PlayerEffectController.cs" />
+    <Compile Include="Assets\Scripts\Player\PlayerEffects.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerMaster.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerMotor.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerSetup.cs" />
