--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /[Ll]ibrary/
 sysinfo.txt
 *.stackdump
+.metadata
  
 # ============================================= #
 # Visual Studio / MonoDevelop / Rider generated #
